[metadata]
name = ethexporter
summary = Ethereum web3 RPC exporter
license = MIT
author = Denis Mishchishin
author-email = dennz78@gmail.com
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://denz1.gitlab.io/devconfig
requires-python = <=3.6
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Utilities

[pbr]
warnerrors = True

[files]
packages = ethexporter

[entry_points]
console_scripts =
    ethexporter = ethexporter:cli.exporter

[wheel]
universal = 0